
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct snd_soc_dai {int dummy; } ;
struct imx_ssi {int flags; scalar_t__ base; } ;


 int EINVAL ;
 int IMX_SSI_NET ;
 int IMX_SSI_SYN ;
 int IMX_SSI_USE_I2S_SLAVE ;



 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;



 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;


 int SSI_I2S_MODE_MASK ;
 scalar_t__ SSI_SCR ;
 int SSI_SCR_I2S_MODE_SLAVE ;
 int SSI_SCR_NET ;
 int SSI_SCR_SYN ;
 scalar_t__ SSI_SRCR ;
 scalar_t__ SSI_STCR ;
 int SSI_STCR_TEFS ;
 int SSI_STCR_TFEN0 ;
 int SSI_STCR_TFSI ;
 int SSI_STCR_TFSL ;
 int SSI_STCR_TSCKP ;
 int SSI_STCR_TXBIT0 ;
 int readl (scalar_t__) ;
 struct imx_ssi* snd_soc_dai_get_drvdata (struct snd_soc_dai*) ;
 int writel (int,scalar_t__) ;

__attribute__((used)) static int imx_ssi_set_dai_fmt(struct snd_soc_dai *cpu_dai, unsigned int fmt)
{
 struct imx_ssi *ssi = snd_soc_dai_get_drvdata(cpu_dai);
 u32 strcr = 0, scr;

 scr = readl(ssi->base + SSI_SCR) & ~(SSI_SCR_SYN | SSI_SCR_NET);


 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 133:

  strcr |= SSI_STCR_TXBIT0 | SSI_STCR_TSCKP | SSI_STCR_TFSI |
   SSI_STCR_TEFS;
  scr |= SSI_SCR_NET;
  if (ssi->flags & IMX_SSI_USE_I2S_SLAVE) {
   scr &= ~SSI_I2S_MODE_MASK;
   scr |= SSI_SCR_I2S_MODE_SLAVE;
  }
  break;
 case 130:

  strcr |= SSI_STCR_TXBIT0 | SSI_STCR_TSCKP;
  break;
 case 134:

  strcr |= SSI_STCR_TXBIT0 | SSI_STCR_TSCKP | SSI_STCR_TFSL;
  break;
 case 135:

  strcr |= SSI_STCR_TXBIT0 | SSI_STCR_TSCKP | SSI_STCR_TFSL |
   SSI_STCR_TEFS;
  break;
 }


 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 132:
  strcr ^= SSI_STCR_TSCKP | SSI_STCR_TFSI;
  break;
 case 131:
  strcr ^= SSI_STCR_TSCKP;
  break;
 case 129:
  strcr ^= SSI_STCR_TFSI;
  break;
 case 128:
  break;
 }


 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 136:
  break;
 default:

  return -EINVAL;
 }

 strcr |= SSI_STCR_TFEN0;

 if (ssi->flags & IMX_SSI_NET)
  scr |= SSI_SCR_NET;
 if (ssi->flags & IMX_SSI_SYN)
  scr |= SSI_SCR_SYN;

 writel(strcr, ssi->base + SSI_STCR);
 writel(strcr, ssi->base + SSI_SRCR);
 writel(scr, ssi->base + SSI_SCR);

 return 0;
}
